Set up redux and create category
