# backend/src/routes/index.js
@@ -4,6 +4,7 @@ const express = require("express");
 const swaggerUi = require("swagger-ui-express");
 const authen = require("./authen");
 const company = require("./company");
+const category = require("./category");
 const user = require("./user");
 const swagger = require("../../swagger-output.json");
 const router = express.Router();
@@ -13,28 +14,9 @@ router.get("/api/v1/docs.json", (req, res) => {
   res.setHeader("Content-Type", "application/json");
   res.send(swagger);
 });
-// router.get("/api/v1/test", async (req, res, next) => {
-//   const keyToken = await keytokenRepo.findById("66d9d64146b07f25803d4c4f", {
-//     populates: ["user"],
-//     unselect: ["user"],
-//   });
-//   const b = await keytokenRepo.findOne({
-//     user: convertToObjectId("66d9d5daf64dfe524969c2e0"),
-//   });
-
-//   const c = await keytokenRepo.find();
-//   const d = await userRepo.findById("66d9d5daf64dfe524969c2e0", {
-//     select: ["password"],
-//   });
-//   res.send({
-//     body: keyToken,
-//     b: b,
-//     c,
-//     d
-//   });
-// });
 router.use("/api/v1/user", user);
 router.use("/api/v1/company", company);
+router.use("/api/v1/category", category);
 router.use("/api/v1", authen);
 
 module.exports = router;
